Some more reverts

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link rel="icon" type="image/png" href="./src/assets/favicon.png" />
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-EPF21ZKEHC"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-EPF21ZKEHC");
+    </script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brain tumor detection</title>
   </head>
